--- a/style.css
+++ b/style.css
@@ -96,6 +96,10 @@ p:last-of-type {
     padding: 0 15px;
 }
 
+.row.triple {
+    grid-template-columns: auto auto auto;
+}
+
 h1.cat{
     margin-top: 100px;
 }
