--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ p:last-of-type {
     color: whitesmoke;
     text-align: center;
     display: block;
-    padding: 50px 16px;
+    padding: 40px 16px;
     margin: 16px 0;
     text-decoration: none;
 }
@@ -151,6 +151,15 @@ h1.cat{
 .text p{
     width: 100%;
     padding: 15px;
+}
+.tb-list{
+    background-color: transparent;
+    margin: 15px;
+}
+.tb-list li, h1{
+    color: whitesmoke;
+    float: initial;
+    padding-bottom: 10px;
 }
 
 /* Responsive columns */
