--- a/style.css
+++ b/style.css
@@ -187,11 +187,13 @@ h1.cat{
     background-color: white;
     border-radius: 5px;
     padding: 0 5px;
+    border: 1px solid #111;
 }
 
 .goup:hover{
     color: whitesmoke;
     background-color: #111;
+    border: 1px solid whitesmoke;
 }
 
 /* Responsive columns */
