--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ h1.cat{
     color:#111;
     z-index: 2;
     text-align: right;
-    font-size: xxx-large;
+    font-size: 3rem;
     text-decoration: none;
     background-color: white;
     border-radius: 5px;
