--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ main{
     justify-content: center;
     align-items: center;
     min-height: calc(100vh - var(--header-height));
+}
+
+main > .container{
     padding-top: calc(var(--header-height) * 2);
     padding-bottom: calc(var(--header-height) * 1);
 }
